--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 			integrity="sha512-SnH5WK+bZxgPHs44uWIX+LLJAJ9/2PkPKZ5QiAj6Ta86w+fsb2TkcmfRyVX3pBnMFcV7oQPJkl9QevSCWr3W6A=="
 			crossorigin="anonymous"
 			referrerpolicy="no-referrer" />
-		<title>Ecommerce</title>
+		<title>FloneStoreKeeb</title>
 	</head>
 	<body>
 		<div id="root"></div>
